--- a/src/css-example/CssCard/cssCard.css
+++ b/src/css-example/CssCard/cssCard.css
@@ -4,7 +4,7 @@
 
 .card button {
     border-radius: 8px;
-    border: 1px solid transparent;
+    border: 3px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
@@ -15,16 +15,19 @@
 }
 
 .card button:hover {
-    border-color: #646cff;
+    border: 3px solid #646cff;
 }
 
-.card button:focus,
-.card button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+.even .card button {
+    text-decoration: underline;
 }
+
+.odd .card button {
+    text-decoration: overline;
+}
+
 
 @media (prefers-color-scheme: light) {
-
     .card button {
         background-color: #f9f9f9;
     }
