--- a/src/scss-example/ScssCard/scssCard.scss
+++ b/src/scss-example/ScssCard/scssCard.scss
@@ -1,31 +1,31 @@
 .card {
     padding: 2em;
-}
 
-.card button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
+    button {
+        border-radius: 8px;
+        border: 3px solid transparent;
+        padding: 0.6em 1.2em;
+        font-size: 1em;
+        font-weight: 500;
+        font-family: inherit;
+        background-color: #1a1a1a;
+        cursor: pointer;
+        transition: border-color 0.25s;
 
-.card button:hover {
-    border-color: #646cff;
-}
+        &:hover {
+            border: 3px solid #646cff;
+        }
 
-.card button:focus,
-.card button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-}
+        @at-root .even & {
+            text-decoration: underline;
+        }
 
-@media (prefers-color-scheme: light) {
+        @at-root .odd & {
+            text-decoration: overline;
+        }
 
-    .card button {
-        background-color: #f9f9f9;
+        @media (prefers-color-scheme: light) {
+            background-color: #f9f9f9;
+        }
     }
 }
